--- a/package.json
+++ b/package.json
@@ -1,35 +1,55 @@
 {
-  "name": "easy-code-by-cli",
-  "version": "0.0.1",
-  "description": "easy-code-cli",
-  "main": "index.ts",
+  "name": "easy-code-tool-cli",
+  "version": "0.0.0",
+  "description": "Easy-code-tool-cli",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "scripts": {
-    "test": "node --trace-warnings --loader ts-node/esm ./index.ts",
-    "test-nom": "easy-code-cli"
+    "test": "node ./dist/index.umd.cjs",
+    "build": "vite build",
+    "publish": "npm publish ."
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
+    }
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Abernethy-BY/Easy-code-cli.git"
+    "url": "git+https://github.com/Abernethy-BY/Easy-code-tool-cli.git"
   },
   "keywords": [
     "By"
   ],
+  "bin": "./dist/index.umd.cjs",
   "author": "Abernethy-By",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Abernethy-BY/Easy-code-cli/issues"
+    "url": "https://github.com/Abernethy-BY/Easy-code-tool-cli/issues"
   },
-  "homepage": "https://github.com/Abernethy-BY/Easy-code-cli#readme",
+  "homepage": "https://github.com/Abernethy-BY/Easy-code-tool-cli#readme",
   "dependencies": {
-    "@antfu/eslint-config": "^0.39.7",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@inquirer/input": "^1.2.3",
     "@inquirer/prompts": "^2.3.0",
+    "consola": "^3.2.2",
+    "events": "^3.3.0",
+    "rollup-plugin-node-polyfills": "^0.2.1"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^0.39.7",
     "@sindresorhus/tsconfig": "^3.0.1",
     "@types/node": "^20.3.3",
     "inquirer": "^9.2.7",
     "node": "^20.3.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite": "^4.3.9"
   }
 }
